name:                FalloutHack
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/FalloutHack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-files:          src/words_alpha.txt

executable FalloutHack
  hs-source-dirs:      src
  main-is:             Hacking.hs
  default-language:    Haskell2010
  other-modules:       Paths_FalloutHack
  build-depends:       base >= 4.7 && < 5
                     , random
                     , text
